Fix relationships between entities in dbContext

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,10 +1,10 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-KSTQ195\\SQLEXPRESS;Database=kalum_2021;User Id=kalum;Password=kinal.2021;"
+        "DefaultConnection": "Server=DESKTOP-E21JIQR\\SQLEXPRESS;Database=kalum_2021;User Id=kalum1;Password=kinal.2021;"
     },
     "Logging": {
         "LogLevel": {
-            "Default": "Information",
+            "Default": "Debug",
             "Microsoft": "Warning",
             "Microsoft.Hosting.Lifetime": "Information"
         }
